<resources>
    <string name="app_name">UrbanTrackingApp</string>

    <string name="nav_name">Sebastian Drost and Matthias Stein</string>
    <string name="nav_name2">Hochschule Bochum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_start">Start</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_gps">Start GPS</string>
    <string name="action_send">Send</string>
    <string name="action_share">Share</string>

    <string name="txt_longitude">Longitude</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_trackID">TrackID</string>
    <string name="txt_activity">Activity</string>

    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="switchStartTracking">Start Tracking</string>
    <string name="switchStopTracking">Start Tracking</string>
    <string name="lastPosition">Last known Position</string>

    <string name="update_interval">Update interval</string>
    <string name="low_update_interval">Low</string>
    <string name="high_update_interval">High</string>
    <string name="seconds">seconds</string>

    <string name="location_service_started">Tracking started</string>

    <string name="welcome">Welcome to the UrbanTrackingApp!</string>
    <string name="login">Please sign in to your Google account</string>

    <string name="reset_app">Reset app</string>

    <string name="no_points_tracked">No points tracked</string>
    <string name="one_point_tracked">One point tracked</string>
    <string name="points_tracked">points tracked</string>

    <string name="preference_file_key_tracks">drost_stein.fbg.hsbo.de.urbantrackingapp.UNSYNCED_TRACKS</string>

    <string name="wifi_connected">WIFI connection available</string>
    <string name="mobile_connection">Internet connection available</string>
    <string name="lost_wifi_connection">No WIFI connection</string>
    <string name="lost_internet_connection">No internet connection</string>sync_tracks

    <string name="upload_tracks">Upload Tracks</string>
    <string name="unsynced_tracks">Unsynchronized Tracks:</string>
    <string name="unsynced_track_points">Unsynchronized Trackpoints:</string>
    <string name="start_upload">Start Upload</string>

    <string name="no_features">No tracks for upload</string>
    <string name="feature_upload_success">Upload Success</string>
    <string name="feature_upload_error">Upload Fail</string>

    <string name="unknown_address">Unknown Address</string>
    <string name="feature_upload_title">Track Upload</string>
    <string name="feature_upload_message">Please wait for uploading the tracks</string>

    <string name="internet_settings">Internet Setting</string>
    <string name="switchOnlyWIFIOn">Only WIFI on</string>
    <string name="switchOnlyWIFIOff">Only WIFI off</string>

</resources>
